--- a/app/src/main/res/layout/accessibility.xml
+++ b/app/src/main/res/layout/accessibility.xml
@@ -56,77 +56,20 @@
         android:padding="16dp" />
 
     <!-- Theme Selector -->
-    <TextView
-        android:id="@+id/themeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Color Theme"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/fontSizeSeekBar"
-        app:layout_constraintStart_toStartOf="parent"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp" />
 
-    <RadioGroup
-        android:id="@+id/themeRadioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/themeLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp">
-
-        <RadioButton
-            android:id="@+id/lightModeRadio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Light"
-            android:checked="true" />
-
-        <RadioButton
-            android:id="@+id/darkModeRadio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dark"
-            android:layout_marginStart="16dp" />
-    </RadioGroup>
 
     <!-- High Contrast Toggle -->
-    <TextView
-        android:id="@+id/highContrastLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/high_contrast"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/themeRadioGroup"
-        app:layout_constraintStart_toStartOf="parent"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp" />
-
-    <Switch
-        android:id="@+id/highContrastSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/highContrastLabel" />
 
     <!-- Save Button -->
     <Button
         android:id="@+id/saveAccessibilityButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Save Settings"
+        android:layout_margin="16dp"
         android:backgroundTint="@color/orange"
+        android:text="Save Settings"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/highContrastSwitch"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
