--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_tracker"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_tracker" />
+        android:icon="@drawable/tracker"
+        android:title="Tracker" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard"/>
+        android:icon="@drawable/routines"
+        android:title="Routines"/>
 
     <item
         android:id="@+id/navigation_progress"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_progress"/>
+        android:icon="@drawable/workouts"
+        android:title="Workouts"/>
 
 </menu>
