--- a/app/src/main/res/layout/activity_workout_creation.xml
+++ b/app/src/main/res/layout/activity_workout_creation.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="0dp"
-    tools:context=".WorkoutRoutineCreationActivity">
+    tools:context=".WorkoutCreationActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
